--- a/SaveTheAmazonMidTerm/Assembly-CSharp.csproj
+++ b/SaveTheAmazonMidTerm/Assembly-CSharp.csproj
@@ -64,6 +64,8 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\DamageCircle.cs" />
     <Compile Include="Assets\Scripts\MainMenu.cs" />
+    <Compile Include="Assets\Scripts\UIControl.cs" />
+    <Compile Include="Assets\Scripts\VolumeControl.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
@@ -97,8 +99,6 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeB.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexZoom.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\WarpTextExample.cs" />
-    <Compile Include="Assets\UIControl.cs" />
-    <Compile Include="Assets\VolumeControl.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
@@ -121,49 +121,49 @@
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Sprite.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface.shader" />
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.Editor">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.Runtime">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Runtime.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Lightweight.Runtime">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.RenderPipelines.Lightweight.Runtime.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.RenderPipelines.Lightweight.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Lightweight.Editor">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.RenderPipelines.Lightweight.Editor.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.RenderPipelines.Lightweight.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Postprocessing.Editor">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.Postprocessing.Editor.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.Postprocessing.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Postprocessing.Runtime">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.Postprocessing.Runtime.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.Postprocessing.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Unity.ShaderGraph.Editor">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.ShaderGraph.Editor.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.ShaderGraph.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.RenderPipelines.Core.ShaderLibrary">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.1.14f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -352,13 +352,13 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.1.14f1/Editor/Data/PlaybackEngines/VuforiaSupport/Managed/Runtime/Vuforia.UnityExtensions.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Editor">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>T:/HK7/Game Dev/Midterm/SaveTheAmazonMidTerm/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
+      <HintPath>T:/HK7/Game Dev/Projects/GameDev-16CNTN/SaveTheAmazonMidTerm/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.1.14f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
